--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
+    "@react-three/rapier": "^1.5.0",
     "@react-three/xr": "^6.4.12",
     "iwer": "^1.0.4",
     "leva": "^0.9.35",
