--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mars-surface",
-  "homepage": "https://akapez.github.io/mars-surface",
+  "homepage": "https://akapez.github.io/mars-surface/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
